feat(core-api + frontend): redo database architecture and app logic
